--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <p class="foobut">
-            <a href="">Crea una página</a>
+            <a href="" class="texta">Crea una página</a>
             para un famoso, una marca o una empresa.
         </p>
             
@@ -98,7 +98,7 @@
         </div>
     
         <div>
-            <a href="">
+            <a href="" class="textf">
                 Registrarte    Iniciar sesión    Messenger    Facebook Lite    Vídeo    Lugares    Juegos    Marketplace    Meta Pay    Meta Store    Meta Quest    Imaginar con Meta AI    Instagram    Threads    Recaudaciones de fondos    Servicios      Centro de información de votación    Política de privacidad    Centro de privacidad    Configuración de cookies    Grupos    Información    Crear anuncio    Crear página    Desarrolladores    Empleo    Cookies    Configuración de cookies    Opciones de anuncios    Condiciones    Ayuda    Subir contactos y no usuarios    Configuración    Registro de actividad
             </a>
         </div>
